--- a/calculator.html
+++ b/calculator.html
@@ -6,7 +6,7 @@
   <title>Calculator</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html">Toolbox</a>
@@ -31,7 +31,7 @@
       <input type="text" id="calcResult" class="form-control" readonly>
     </div>
   </main>
-  <footer class="bg-light text-center py-3">
+  <footer class="bg-light text-center py-3 mt-auto" >
     <p>&copy; 2024 Mini Toolbox. All rights reserved.</p>
   </footer>
   <script>
