--- a/password.html
+++ b/password.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html">Toolbox</a>
@@ -33,7 +33,7 @@
       <input type="text" id="generatedPassword" class="form-control" readonly>
     </div>
   </main>
-  <footer class="bg-light text-center py-3">
+  <footer class="bg-light text-center py-3 mt-auto">
     <p>&copy; 2024 Mini Toolbox. All rights reserved.</p>
   </footer>
   <script src="js/script.js"></script>
