--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mini Toolbox</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -32,15 +32,42 @@
   </header>
   <main class="container my-5">
     <section>
-      <h2>Available Tools</h2>
-      <ul>
-        <li><a href="password.html">Password Generator</a></li>
-        <li><a href="converter.html">Currency Converter</a></li>
-        <li><a href="calculator.html">Calculator</a></li>
-      </ul>
+      <h2 class="text-center mb-4">Available Tools</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <a href="password.html" class="tool-card">
+            <div class="card shadow-sm text-center">
+              <div class="card-body">
+                <h5 class="card-title">Password Generator</h5>
+                <p class="card-text">Create secure passwords in seconds.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="converter.html" class="tool-card">
+            <div class="card shadow-sm text-center">
+              <div class="card-body">
+                <h5 class="card-title">Currency Converter</h5>
+                <p class="card-text">Convert currencies easily and quickly.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="calculator.html" class="tool-card">
+            <div class="card shadow-sm text-center">
+              <div class="card-body">
+                <h5 class="card-title">Calculator</h5>
+                <p class="card-text">Perform quick calculations with ease.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
     </section>
   </main>
-  <footer class="bg-light text-center py-3 mt-auto" >
+  <footer class="bg-light text-center py-3 mt-auto">
     <p>&copy; 2024 Mini Toolbox. All rights reserved.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
