--- a/converter.html
+++ b/converter.html
@@ -8,19 +8,22 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Toolbox</a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="password.html">Password Generator</a></li>
-          <li class="nav-item"><a class="nav-link active" href="converter.html">Currency Converter</a></li>
-          <li class="nav-item"><a class="nav-link" href="calculator.html">Calculator</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">Toolbox</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="password.html">Password Generator</a></li>
+              <li class="nav-item"><a class="nav-link" href="converter.html">Currency Converter</a></li>
+              <li class="nav-item"><a class="nav-link" href="calculator.html">Calculator</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
   <main class="container my-5">
     <h1>Currency Converter</h1>
     <div class="mb-3">
@@ -43,7 +46,7 @@
   <footer class="bg-light text-center py-3 mt-auto">
     <p>&copy; 2024 Mini Toolbox. All rights reserved.</p>
   </footer>
-  <script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
     document.getElementById('convertBtn').addEventListener('click', function () {
       const amount = parseFloat(document.getElementById('amount').value);
       const currency = document.getElementById('currency').value;
