--- a/calculator.html
+++ b/calculator.html
@@ -49,5 +49,6 @@
       }
     });
   </script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" src="js/script.js"></script>
 </body>
 </html>
