--- a/converter.html
+++ b/converter.html
@@ -46,7 +46,7 @@
   <footer class="bg-light text-center py-3 mt-auto">
     <p>&copy; 2024 Mini Toolbox. All rights reserved.</p>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+  <script>
     document.getElementById('convertBtn').addEventListener('click', function () {
       const amount = parseFloat(document.getElementById('amount').value);
       const currency = document.getElementById('currency').value;
@@ -55,5 +55,6 @@
       document.getElementById('convertedAmount').value = converted.toFixed(2) + ' ' + currency;
     });
   </script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" src="js/script.js"></script>
 </body>
 </html>
