--- a/password.html
+++ b/password.html
@@ -39,9 +39,8 @@
   <footer class="bg-light text-center py-3 mt-auto">
     <p>&copy; 2024 Mini Toolbox. All rights reserved.</p>
   </footer>
-  <script src="js/script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
-    
+  
+  <script>
     document.getElementById('generateBtn').addEventListener('click', function () {
       const length = parseInt(document.getElementById('passwordLength').value);
       const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*()';
@@ -52,5 +51,6 @@
       document.getElementById('generatedPassword').value = password;
     });
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" src="js/script.js"></script>
 </body>
 </html>
