--- a/calculator.html
+++ b/calculator.html
@@ -38,7 +38,7 @@
   <footer class="bg-light text-center py-3 mt-auto" >
     <p>&copy; 2024 Mini Toolbox. All rights reserved.</p>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+  <script>
     document.getElementById('calcBtn').addEventListener('click', function () {
       const input = document.getElementById('calcInput').value;
       try {
