--- a/converter.html
+++ b/converter.html
@@ -43,6 +43,11 @@
       <input type="text" id="convertedAmount" class="form-control" readonly>
     </div>
   </main>
+  <section id="currency-rates">
+    <h2>Текущие курсы валют</h2>
+    <p>1 USD = <span id="usd-to-som"></span> KGS</p>
+    <p>1 EUR = <span id="eur-to-som"></span> KGS</p>
+  </section>
   <footer class="bg-light text-center py-3 mt-auto">
     <p>&copy; 2024 Mini Toolbox. All rights reserved.</p>
   </footer>
@@ -54,6 +59,18 @@
       const converted = amount * rates[currency];
       document.getElementById('convertedAmount').value = converted.toFixed(2) + ' ' + currency;
     });
+    fetch('https://api.exchangerate-api.com/v4/latest/USD')
+  .then(response => response.json())
+  .then(data => {
+    document.getElementById('usd-to-som').textContent = data.rates.KGS.toFixed(2);
+  });
+
+    fetch('https://api.exchangerate-api.com/v4/latest/EUR')
+    .then(response => response.json())
+    .then(data => {
+    document.getElementById('eur-to-som').textContent = data.rates.KGS.toFixed(2);
+  });
+
   </script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" src="js/script.js"></script>
 </body>
