--- a/converter.html
+++ b/converter.html
@@ -24,54 +24,79 @@
           </div>
         </div>
       </nav>
+
   <main class="container my-5">
     <h1>Currency Converter</h1>
     <div class="mb-3">
-      <label for="amount" class="form-label">Amount in KGS:</label>
+      <label for="amount" class="form-label">Amount in:</label>
       <input type="number" id="amount" class="form-control" placeholder="Enter amount">
     </div>
     <div class="mb-3">
-      <label for="currency" class="form-label">Convert to:</label>
-      <select id="currency" class="form-select">
+      <label for="from-currency" class="form-label">From currency:</label>
+      <select id="from-currency" class="form-select">
+        <option value="KGS">KGS</option>
         <option value="USD">USD</option>
         <option value="EUR">EUR</option>
       </select>
     </div>
+    <div class="mb-3">
+      <label for="to-currency" class="form-label">Convert to:</label>
+      <select id="to-currency" class="form-select">
+        <option value="USD">USD</option>
+        <option value="EUR">EUR</option>
+        <option value="KGS">KGS</option>
+      </select>
+    </div>
     <button id="convertBtn" class="btn btn-primary">Convert</button>
+
     <div class="mt-3">
       <label class="form-label">Converted Amount:</label>
       <input type="text" id="convertedAmount" class="form-control" readonly>
     </div>
   </main>
-  <section id="currency-rates">
-    <h2>Текущие курсы валют</h2>
+
+  <section id="currency-rates" class="my-5">
+    <h2>Current Currency Rates</h2>
     <p>1 USD = <span id="usd-to-som"></span> KGS</p>
     <p>1 EUR = <span id="eur-to-som"></span> KGS</p>
   </section>
+
   <footer class="bg-light text-center py-3 mt-auto">
     <p>&copy; 2024 Mini Toolbox. All rights reserved.</p>
   </footer>
+
   <script>
+    // Конвертация валют с использованием статических курсов
     document.getElementById('convertBtn').addEventListener('click', function () {
       const amount = parseFloat(document.getElementById('amount').value);
-      const currency = document.getElementById('currency').value;
-      const rates = { USD: 0.011, EUR: 0.01 }; // Примерные курсы
-      const converted = amount * rates[currency];
-      document.getElementById('convertedAmount').value = converted.toFixed(2) + ' ' + currency;
+      const fromCurrency = document.getElementById('from-currency').value;
+      const toCurrency = document.getElementById('to-currency').value;
+
+      const rates = { 
+        USD: 0.011, 
+        EUR: 0.01, 
+        KGS: 1 
+      };
+
+      // Конвертируем сумму в валюту назначения
+      const converted = amount * rates[toCurrency] / rates[fromCurrency];
+      document.getElementById('convertedAmount').value = converted.toFixed(2) + ' ' + toCurrency;
     });
+
+    // Получение текущих курсов валют с API
     fetch('https://api.exchangerate-api.com/v4/latest/USD')
-  .then(response => response.json())
-  .then(data => {
-    document.getElementById('usd-to-som').textContent = data.rates.KGS.toFixed(2);
-  });
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('usd-to-som').textContent = data.rates.KGS.toFixed(2);
+      });
 
     fetch('https://api.exchangerate-api.com/v4/latest/EUR')
-    .then(response => response.json())
-    .then(data => {
-    document.getElementById('eur-to-som').textContent = data.rates.KGS.toFixed(2);
-  });
-
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('eur-to-som').textContent = data.rates.KGS.toFixed(2);
+      });
   </script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" src="js/script.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
