--- a/converter.html
+++ b/converter.html
@@ -20,10 +20,11 @@
               <li class="nav-item"><a class="nav-link" href="password.html">Password Generator</a></li>
               <li class="nav-item"><a class="nav-link" href="converter.html">Currency Converter</a></li>
               <li class="nav-item"><a class="nav-link" href="calculator.html">Calculator</a></li>
+              <li class="nav-item"><a class="nav-link" href="MeasurementConv.html">Unit Converter</a></li>
             </ul>
           </div>
         </div>
-      </nav>
+    </nav>
 
   <main class="container my-5">
     <h1>Currency Converter</h1>
