--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Toolbox</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="password.html">Password Generator</a></li>
-          <li class="nav-item"><a class="nav-link" href="converter.html">Currency Converter</a></li>
-          <li class="nav-item"><a class="nav-link" href="calculator.html">Calculator</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">Toolbox</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="password.html">Password Generator</a></li>
+              <li class="nav-item"><a class="nav-link" href="converter.html">Currency Converter</a></li>
+              <li class="nav-item"><a class="nav-link" href="calculator.html">Calculator</a></li>
+              <li class="nav-item"><a class="nav-link" href="MeasurementConv.html">Unit Converter</a></li>
+            </ul>
+          </div>
+        </div>
+    </nav>
   <header class="bg-primary text-white text-center py-5">
     <div class="container">
       <h1>Welcome to the Mini Toolbox</h1>
