--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
             </div>
           </a>
         </div>
+        <div class="col-md-4">
+            <a href="MeasurementConv.html" class="tool-card">
+              <div class="card shadow-sm text-center">
+                <div class="card-body">
+                  <h5 class="card-title">Unit Converter</h5>
+                  <p class="card-text">Convert between different units of measurement quickly and easily.</p>
+                </div>
+              </div>
+            </a>
+          </div>
       </div>
     </section>
   </main>
