--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <main class="container my-5">
     <section>
       <h2 class="text-center mb-4">Available Tools</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
+      <div class="row justify-content-between">
+        <div class="col-md-3 mb-4">
           <a href="password.html" class="tool-card">
             <div class="card shadow-sm text-center">
               <div class="card-body">
@@ -45,7 +45,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3 mb-4">
           <a href="converter.html" class="tool-card">
             <div class="card shadow-sm text-center">
               <div class="card-body">
@@ -55,7 +55,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3 mb-4">
           <a href="calculator.html" class="tool-card">
             <div class="card shadow-sm text-center">
               <div class="card-body">
@@ -65,16 +65,17 @@
             </div>
           </a>
         </div>
-        <div class="col-md-4">
-            <a href="MeasurementConv.html" class="tool-card">
-              <div class="card shadow-sm text-center">
-                <div class="card-body">
-                  <h5 class="card-title">Unit Converter</h5>
-                  <p class="card-text">Convert between different units of measurement quickly and easily.</p>
-                </div>
+        <!-- Новый блок с центровкой последнего элемента -->
+        <div class="col-md-3 mb-4 d-flex justify-content-center">
+          <a href="MeasurementConv.html" class="tool-card">
+            <div class="card shadow-sm text-center">
+              <div class="card-body">
+                <h5 class="card-title">Unit Converter</h5>
+                <p class="card-text">Convert between different units of measurement quickly and easily.</p>
               </div>
-            </a>
-          </div>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
   </main>
